# 20s2-cp-spa-team-32

./: README.md
Team00/Code00/: CMakeLists.txt
Team00/Code00/src/integration_testing/: CMakeLists.txt
Team00/Code00/src/integration_testing/src/: PKBStub.cpp  PKBStub.h  ParserTokenizerIntegrationTester.cpp  TestPKBQuery.cpp  TestParserPKBPQL.cpp  TestQuerySystem.cpp  TestResultsTableUtil.cpp  TestResultsTableUtil.h  TestSourceProcessor.cpp
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/unit_testing/: CMakeLists.txt
Team00/Tests00/iteration1/complexTest/: complexTest_2_Clause_queries.txt  complexTest_FollowStar_Invalid_queries.txt  complexTest_FollowStar_Valid_queries.txt  complexTest_Follows_Invalid_queries.txt  complexTest_Follows_Valid_queries.txt  complexTest_Modifies_Valid_queries.txt  complexTest_ParentStar_Valid_queries.txt  complexTest_Parent_Invalid_queries.txt  complexTest_Parent_Valid_queries.txt  complexTest_Pattern_Invalid_queries.txt  complexTest_Pattern_Valid_queries.txt  complexTest_Uses_Invalid_queries.txt  complexTest_Uses_Valid_queries.txt  complexTest_source - comment.txt  complexTest_source.txt
Team00/Tests00/iteration1/conditionalTest/: conditionalTest_2_Clause_queries.txt  conditionalTest_FollowStar_Invalid_queries.txt  conditionalTest_FollowStar_Valid_queries.txt  conditionalTest_Follows_Invalid_queries.txt  conditionalTest_Follows_Valid_queries.txt  conditionalTest_Modifies_Valid_queries.txt  conditionalTest_ParentStar_Invalid_queries.txt  (+9 more)
Team00/Tests00/iteration2/: extraTest_queries.txt  extraTest_source.txt
(+175 files in other folders)
